# 02807_Project

./: .gitignore  README.md  Taskfile.yml  data_pipeline_demo.ipynb  pyproject.toml
data/analysis/: community_assignments.json  community_statistics.json  null_model_statistics.json  top_movies_per_community.json
scripts/: gcloud_auth.sh  setup.sh
src/02807_project/: analyze_actor_network.py  cluster.ipynb  collaborative_filtering.py  data_cleaner.py  data_loader.py  embeddings_openai.ipynb  explore_data.py  frequent_items.py  merge_datasets.py  scrape_rt_movies.py  visualize_similarities.py
src/02807_project/data/: loader.py
src/02807_project/helpers/: logger.py
src/student_project_template/: main.py
src/student_project_template/helpers/: example_imports.py
